# pet-server

./: Dockerfile  README_서버IT담당자용_설명.txt  README_애견추천API구성요약.txt  fly.toml  main.py  pyproject.toml
.github/workflows/: fly-deploy.yml
data/: dog_dummy_data_1200_with_gps_final.xlsx
models/: ranknet_bidirectional.py  ranknet_unidirectional.py
utils/: evaluator.py  preprocess.py
