[project]
name = "pet-server-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "numpy>=2.2.6",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "pydantic>=2.11.5",
    "scikit-learn>=1.7.0",
    "torch>=2.7.1",
]
